<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SLSC Race Points</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="races">Races</string>
    <string name="swimmers">Swimmers</string>
    <string name="enter_results">Enter Results</string>
    <string name="title_activity_races">Races</string>
    <string name="title_activity_swimmers">Swimmers</string>
    <string name="title_activity_enter_results">Enter Results</string>
    <string name="title_activity_password">Password Protected</string>
    <string name="enter_password">Enter Password:</string>
    <string name="edit_password">Password</string>
    <string name="button_submit">Submit</string>
    <string name="button_delete">Delete</string>
    <string name="button_continue">Continue</string>
    <string name="password">admin</string>
    <string name="title_activity_new_race">New Race</string>
    <string name="title_activity_edit_race">Edit Race</string>
    <string name="title_activity_new_swimmer">New Swimmer</string>
    <string name="title_activity_edit_swimmer">Edit Swimmer</string>
    <string name="new_race">New Race</string>
    <string name="edit_race">Edit Race</string>
    <string name="new_swimmer">New Swimmer</string>
    <string name="edit_swimmer">Edit Swimmer</string>
    <string name="race_name">Race Name</string>
    <string name="name">Name:</string>
    <string name="date">Date</string>
    <string name="day">dd</string>
    <string name="month">mm</string>
    <string name="year">yyyy</string>
    <string name="length">Length</string>
    <string name="yards">yards</string>
    <string name="no_swimmers">Number of Swimmers:</string>
    <string name="number">#</string>
    <string name="surname">Surname</string>
    <string name="forename">Forename</string>
    <string name="dob">Date of Birth</string>
    <string name="handicap">Initial Handicap (100 yds)</string>
    <string name="min_sec">Min.Sec</string>
    <string name="sex">Sex</string>
    <string name="m_f">M/F</string>
    <string name="title_activity_display_swimmer">Swimmer Information</string>
    <string name="title_activity_edit_individual">Edit Swimmer</string>
    <string name="title_activity_display_race">Race Information</string>
    <string name="title_activity_times">Results</string>
    <string name="time">Time (min.sec)</string>
    <string name="title_activity_edit_race_details">Edit Race</string>
    <string name="title_activity_edit_results">Edit Results</string>
    <string name="min">Min</string>
    <string name="sec">Sec</string>
    <string name="year_title">Year</string>
    <string name="name_title">Name</string>
    <string name="list_place">Place</string>
    <string name="list_name">Name</string>
    <string name="list_time">Time</string>
    <string name="list_hc_time">+HC</string>
    <string name="swimmer">Swimmer</string>
    <string name="title_activity_final_race">Results</string>

</resources>