<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:paddingTop="5dp"
        android:textSize="20sp"
        android:text="@string/race_name" />
    
    <EditText android:id="@+id/race_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/slsc_green"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="20sp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:inputType="textPersonName"
            android:hint="@string/name_title" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:paddingTop="5dp"
        android:textSize="20sp"
        android:text="@string/date" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/slsc_yellow"
        android:orientation="horizontal" >
        
        <EditText android:id="@+id/day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="number"
            android:hint="@string/day" />
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="/" />
        
        <EditText android:id="@+id/month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="number"
            android:hint="@string/month" />
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="/" />
        
        <EditText android:id="@+id/year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="number"
            android:hint="@string/year" />
        
	</LinearLayout>
       
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:paddingTop="5dp"
        android:textSize="20sp"
        android:text="@string/length" />
        
        <EditText android:id="@+id/no_yards"
            android:paddingTop="15dp"
        	android:paddingBottom="15dp"
        	android:background="@color/slsc_blue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="20sp"
            android:inputType="numberDecimal"
            android:hint="@string/yards" />
        
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:paddingTop="5dp"
        android:textSize="20sp"
        android:text="@string/no_swimmers" />
        
        <EditText android:id="@+id/no_swimmers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:paddingTop="15dp"
        	android:paddingBottom="15dp"
       	 	android:background="@color/slsc_red"
            android:inputType="number"
            android:hint="@string/number" />
        
        <View 
            android:layout_width="fill_parent"
            android:layout_height="20dp"/>
	
	<Button         
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@color/slsc_green"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/button_continue"
        android:onClick="enterNewRace"/>

</LinearLayout>
</ScrollView>