<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <View 
	    android:layout_width="match_parent"
	    android:layout_height="30dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:gravity="center"
        android:background="@color/slsc_green"
        android:textColor="@color/white"
        android:text="@string/enter_password" />
    <View 
	    android:layout_width="match_parent"
	    android:layout_height="30dp"/>
    <EditText android:id="@+id/password_attempt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:background="@color/slsc_yellow"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:gravity="center"
        android:hint="@string/edit_password"
        android:inputType="textPassword" />
    <View 
	    android:layout_width="match_parent"
	    android:layout_height="30dp"/>
    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:background="@color/slsc_blue"
        android:textColor="@color/white"
        android:text="@string/button_submit"
        android:onClick="enterPassword"/>

</LinearLayout>
</ScrollView>
